# MoVA

./: .gitignore  README.md  bak.toml  pyproject.toml
mova/eval/: eval_ImagetNet.py  eval_textvqa.py  m4c_evaluator.py  model_vqa.py  model_vqa_loader.py  model_vqa_science.py
mova/model/: arch.py  builder.py
mova/model/multimodal_encoder/: mova_encoder.py
mova/train/: train.py  train_mem.py
playground/data/eval/imagenet/answers/: mova-8b.jsonl
scripts/: convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py
scripts/mova/: finetune_lora.sh
scripts/mova/eval/: gqa.sh  grounding.sh  imagenet.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh
